Refactor /databundles, /dataobjects (closes #80) (#87)
* Refactor /databundles, /dataobjects (closes #80)

* Address review comments

* Address doc review comments
